Alterando bootstrap das tabelas, alterando buscas/..

--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Index.cshtml
@@ -16,7 +16,7 @@
     <form asp-controller="ContasClientes" asp-action="Index" method="get">
         <p>
             Nome/Razão Social: <input type="text" name="SearchString">
-            <input type="submit" value="Filtrar"/>
+            <input type="submit" value="Filtrar" />
         </p>
     </form>
 }
@@ -33,14 +33,14 @@
         }
 
         <thead>
-            <tr class="bg-dark text-white">
+            <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.ContaCliente.DataAbertura)
                 </th>
                 @if (User.IsInRole("Admin"))
                 {
                     <th>
-                        @Html.ActionLink("Nome", "Index", new { sortOrder = ViewBag.NameSortParm }, new { @class = "text-white imgOrder" })
+                        @Html.ActionLink("Nome", "Index", new { sortOrder = ViewBag.NameSortParm }, new { @class = "imgOrder" })
 
                         @*@Html.DisplayNameFor(model => model.ContaCliente.ApplicationUser.Nome)*@
                     </th>
@@ -48,10 +48,20 @@
                 <th>
                     @Html.DisplayNameFor(model => model.ContaCliente.NumeroConta)
                 </th>
-                <th>
-                    @Html.ActionLink("Saldo", "Index", new { sortOrder = ViewBag.ValueSortParm }, new { @class = "text-white imgOrder" })
+                @if (User.IsInRole("Admin"))
+                {
+                    <th>
+                        @Html.ActionLink("Saldo", "Index", new { sortOrder = ViewBag.ValueSortParm }, new { @class = "imgOrder" })
 
-                </th>
+                    </th>
+                }
+                else
+                {
+                    <th>
+                        @Html.DisplayNameFor(model => model.Saldo)
+                    </th>
+                }
+
                 <th></th>
                 <th style="white-space: nowrap"></th>
             </tr>
