--- a/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
@@ -8,11 +8,10 @@
 
 @if (User.IsInRole("Admin"))
 {
-<p>
+    <p>
     <a asp-action="Create" class="btn btn-light">Adicionar</a>
 </p>
 }
-<br />
 
 <form asp-controller="Criptomoedas" asp-action="Index" method="get">
     <p>
@@ -24,10 +23,10 @@
 <div class="table-responsive">
     <table class="table table-hover">
         <caption>Lista de Criptomoedas</caption> @*acessibilidade*@
-        <thead>
-            <tr class="bg-dark text-white">
+        <thead> 
+            <tr>
                 <th>
-                    @Html.ActionLink("Nome", "Index", new { sortOrder = ViewBag.NameSortParm }, new { @class = "text-white imgOrder" })
+                    @Html.ActionLink("Nome", "Index", new { sortOrder = ViewBag.NameSortParm }, new { @class = "imgOrder" })
                 </th>
                 <th></th>
                 <th>
@@ -35,9 +34,7 @@
                 </th>
                 <th></th>
                 <th>
-
-                    @Html.ActionLink("Cadastro", "Index", new { sortOrder = ViewBag.DateSortParm }, new { @class = "text-white imgOrder" })
-                    @*<img src="~/images/ordenar.png" alt="Setas que indicam a ordenação das criptomoedas por data em que foram registradas" sizes="20" />*@
+                    @Html.DisplayNameFor(model => model.Cadastro)
                 </th>
                 <th></th>
                 <th style="white-space: nowrap"></th>
@@ -63,10 +60,6 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
-                        }
-                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
-                        @if (User.IsInRole("Admin"))
-                        {
                             <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
                         }
                     </td>
