--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Index.cshtml
@@ -12,7 +12,6 @@
         <a asp-action="Create" class="btn btn-light">Adicionar</a>
     </p>
 }
-<br />
 
 <form asp-controller="CriptomoedasHoje" asp-action="Index">
     <p>
@@ -26,20 +25,20 @@
     <table class="table table-hover">
         <caption>Lista de Criptomoedas e seus valores</caption> 
         <thead>
-            <tr class="bg-dark text-white">
+            <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.Data)
                 </th>
                 <th>
-                    @Html.ActionLink("Nome", "Index", new { sortOrder = ViewBag.NameSortParm }, new { @class = "text-white imgOrder" })
+                    @Html.ActionLink("Nome", "Index", new { sortOrder = ViewBag.NameSortParm }, new { @class = "imgOrder" })
                 </th>
                 <th>
                     @*@Html.DisplayNameFor(model => model.Valor)*@
-                    @Html.ActionLink("Valor", "Index", new { sortOrder = ViewBag.ValueSortParm }, new { @class = "text-white imgOrder" })
+                    @Html.ActionLink("Valor", "Index", new { sortOrder = ViewBag.ValueSortParm }, new { @class = "imgOrder" })
 
                 </th>
                 <th></th>
-            </trclass="bg-dark>
+            </tr>
         </thead>
         <tbody>
             @foreach (var item in Model)
