--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Aplicacoes.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Aplicacoes.cshtml
@@ -37,18 +37,19 @@ else
             <tr>
                 @if (User.IsInRole("Admin"))
                 {
-                    <th>
-                        @Html.DisplayNameFor(model => model.ContaCliente.ApplicationUser.Nome)
-                    </th>
+                <th>
+                    @Html.ActionLink("Nome", "Aplicacoes", new { sortOrder = ViewBag.Nome }, new { @class = "imgOrder" })
+                </th>
                 }
+            <th>
+                @Html.ActionLink("Criptomoeda", "Aplicacoes", new { sortOrder = ViewBag.Criptomoeda }, new { @class = "imgOrder" })
+            </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.CriptoSaldo.Criptomoeda)
+                    @Html.ActionLink("Quantidade", "Aplicacoes", new { sortOrder = ViewBag.Quantidade }, new { @class = "imgOrder" })
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.CriptoSaldo.Quantidade)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Data)
+                    @Html.ActionLink("Data", "Aplicacoes", new { sortOrder = ViewBag.Data }, new { @class = "imgOrder" })
+
                 </th>
                 <th></th>
             </tr>
