--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
@@ -76,7 +76,7 @@
                         @Html.DisplayFor(modelItem => item.CriptoSaldo.Quantidade)
                     </td>
                     <td>
-                        <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a>
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
                     </td>
                 </tr>
             }
