--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Litecoin.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Litecoin.cshtml
@@ -81,7 +81,7 @@
 
     <br />
 
-    <canvas id="graficoLitecoin width="400" height="150">
+    <canvas id="graficoLitecoin" width="400" height="150">
     </canvas>
 
     @section Scripts {
