--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Aplicacoes.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Aplicacoes.cshtml
@@ -33,17 +33,18 @@ else
 
 <div class="table-responsive">
     <table class="table">
+        <caption>Lista de Aplicações</caption>
         <thead>
             <tr>
                 @if (User.IsInRole("Admin"))
                 {
-                <th>
-                    @Html.ActionLink("Nome", "Aplicacoes", new { sortOrder = ViewBag.Nome }, new { @class = "imgOrder" })
-                </th>
+                    <th>
+                        @Html.ActionLink("Nome", "Aplicacoes", new { sortOrder = ViewBag.Nome }, new { @class = "imgOrder" })
+                    </th>
                 }
-            <th>
-                @Html.ActionLink("Criptomoeda", "Aplicacoes", new { sortOrder = ViewBag.Criptomoeda }, new { @class = "imgOrder" })
-            </th>
+                <th>
+                    @Html.ActionLink("Criptomoeda", "Aplicacoes", new { sortOrder = ViewBag.Criptomoeda }, new { @class = "imgOrder" })
+                </th>
                 <th>
                     @Html.ActionLink("Quantidade", "Aplicacoes", new { sortOrder = ViewBag.Quantidade }, new { @class = "imgOrder" })
                 </th>
