--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Details.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Details.cshtml
@@ -2,10 +2,11 @@
 
 @{
     ViewData["Title"] = "Detalhes";
+    var total = ViewBag.Total;
 }
-
+<br />
 <h1>@ViewData["Title"]</h1>
-
+<br />
 <div>
     <hr />
     <dl class="row">
@@ -30,9 +31,18 @@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Saldo.SaldoAtualRS)
         </dt>
-        <dd class="col-sm-10">
-            R$ @Html.DisplayFor(model => model.Saldo.SaldoAtualRS)
-        </dd>
+        @if (User.IsInRole("Admin"))
+        {
+            <dd class="col-sm-10">
+                R$ @Html.DisplayFor(model => model.Saldo.SaldoAtualRS)
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10">
+                R$ @total
+            </dd>
+        }
         <div style="white-space:pre-line; font-weight: bold; font-size:larger" class="col-sm-12">
             @ViewBag.ContaVinculada
         </div>
