--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
@@ -34,6 +34,7 @@ else
 
 <div class="table-responsive">
     <table class="table">
+        <caption>Lista de Transações</caption> 
         <thead>
             <tr>
                 <th>
