Adicionando página de simulação

--- a/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
@@ -63,6 +63,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="MeusInvestimentos" asp-action="Index">Investimentos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="CriptomoedasHoje" asp-action="Simulacao">Simulação</a>
+                        </li>
 
                       }
                     </ul>
