Adicionando gráficos de 30 dias

--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Index.cshtml
@@ -15,6 +15,7 @@
 
     <a asp-action="Index" class="btn btn-dark text-white">Hoje</a>
     <a asp-action="Semanal" class="btn btn-outline-dark">Últimos 7 dias</a>
+    <a asp-action="Mensal" class="btn btn-outline-dark">Últimos 30 dias</a>
 
 </div>
 <br />
