--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Litecoin.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Litecoin.cshtml
@@ -12,6 +12,7 @@
 <div class="flex-row">
 
     <a asp-action="Index" class="btn btn-outline-dark">Hoje</a>
+    <a asp-action="Mensal" class="btn btn-outline-dark">Últimos 30 dias</a>
     <a asp-action="Semanal" class="btn btn-outline-dark">Todas as Criptomoedas</a>
     <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
     <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
