--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Mensal.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Mensal.cshtml
@@ -22,19 +22,19 @@
 <br />
 
 <div>
-    <a asp-action="Index" class="btn btn-outline-dark menu">Hoje</a>
-    <a asp-action="Mensal" class="btn btn-outline-dark menu">Últimos 30 dias</a>
-    <a asp-action="Semanal" class="btn btn-dark text-white menu">Todas as Criptomoedas</a>
-    <a asp-action="Bitcoin" class="btn btn-outline-dark menu">Bitcoin</a>
-    <a asp-action="Ethereum" class="btn btn-outline-dark menu">Ethereum</a>
-    <a asp-action="BitcoinCash" class="btn btn-outline-dark menu">Bitcoin Cash</a>
-    <a asp-action="Xrp" class="btn btn-outline-dark menu">XRP</a>
-    <a asp-action="PaxGold" class="btn btn-outline-dark menu">PAX Gold</a>
-    <a asp-action="Litecoin" class="btn btn-outline-dark menu">Litecoin</a>
+    <a asp-action="Index" class="btn btn-outline-dark">Hoje</a>
+    <a asp-action="Semanal" class="btn btn-outline-dark">Últimos 7 dias</a>
+    <a asp-action="Mensal" class="btn btn-dark text-white">Todas as Criptomoedas</a>
+    <a asp-action="Bitcoin30" class="btn btn-outline-dark menu">Bitcoin</a>
+    <a asp-action="Ethereum30" class="btn btn-outline-dark menu">Ethereum</a>
+    <a asp-action="BitcoinCash30" class="btn btn-outline-dark menu">Bitcoin Cash</a>
+    <a asp-action="Xrp30" class="btn btn-outline-dark menu">XRP</a>
+    <a asp-action="PaxGold30" class="btn btn-outline-dark menu">PAX Gold</a>
+    <a asp-action="Litecoin30" class="btn btn-outline-dark menu">Litecoin</a>
 </div>
 
 <br />
-<h4 class="text-center">Últimos 7 Dias - Taxa de Crescimento</h4>
+<h4 class="text-center">Últimos 30 Dias - Taxa de Crescimento</h4>
 <br />
 <div class="container align-items-center">
     <div class="row">
