--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Ethereum.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Ethereum.cshtml
@@ -12,6 +12,7 @@
 <div class="flex-row">
 
     <a asp-action="Index" class="btn btn-outline-dark">Hoje</a>
+    <a asp-action="Mensal" class="btn btn-outline-dark">Últimos 30 dias</a>
     <a asp-action="Semanal" class="btn btn-outline-dark">Todas as Criptomoedas</a>
     <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
     <a asp-action="Ethereum" class="btn btn-dark text-white">Ethereum</a>
@@ -25,7 +26,7 @@
 <h1>@ViewData["Title"]</h1>
 <br />
 <h4 class="text-center">Últimos 7 Dias</h4>
-<canvas id="graficoBitcoin" width="400" height="150">
+<canvas id="graficoEthereum" width="400" height="150">
 </canvas>
 
 @section Scripts {
@@ -35,7 +36,7 @@
         $(document)
             .ready(function () {
 
-                var ctx = document.getElementById('graficoBitcoin').getContext('2d');
+                var ctx = document.getElementById('graficoEthereum').getContext('2d');
                 var myChart = new Chart(ctx, {
                     type: 'line',
                     data: {
