Iniciando parte escrita - controlando versões para evitar perda do mesmo

--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Index.cshtml
@@ -86,8 +86,8 @@
                 </div>
                 <div>
                     <h3>Ethereum</h3>
-                    <h5>Quantidade Ethereum: @Ethereum</h5>
-                    <h5>Valor Investido: R$ @EthereumRS</h5>
+                    <h5>Quantidade: @Ethereum</h5>
+                    <h5>Investido: R$ @EthereumRS</h5>
                 </div>
             </div>
         </div>
@@ -100,8 +100,8 @@
                 </div>
                 <div>
                     <h3>Bitcoin Cash</h3>
-                    <h5>Quantidade Bitcoin Cash: @BitcoinCash</h5>
-                    <h5>Valor Investido: R$ @BitcoinCashRS</h5>
+                    <h5>Quantidade: @BitcoinCash</h5>
+                    <h5>Investido: R$ @BitcoinCashRS</h5>
                 </div>
             </div>
             <br />
@@ -111,8 +111,8 @@
                 </div>
                 <div>
                     <h3>Litecoin</h3>
-                    <h5>Quantidade Litecoin: @Litecoin</h5>
-                    <h5>Valor Investido: R$ @LitecoinRS</h5>
+                    <h5>Quantidade: @Litecoin</h5>
+                    <h5>Investido: R$ @LitecoinRS</h5>
                 </div>
             </div>
         </div>
@@ -125,8 +125,8 @@
                 </div>
                 <div>
                     <h3>PAX Gold</h3>
-                    <h5>Quantidade PAX Gold: @PaxGold</h5>
-                    <h5>Valor Investido: R$ @PaxGoldRS</h5>
+                    <h5>Quantidade: @PaxGold</h5>
+                    <h5>Investido: R$ @PaxGoldRS</h5>
                 </div>
             </div>
             <br />
@@ -137,8 +137,8 @@
                 </div>
                 <div>
                     <h3>XRP</h3>
-                    <h5>Quantidade XRP: @Xrp</h5>
-                    <h5>Valor Investido: R$ @XrpRS</h5>
+                    <h5>Quantidade: @Xrp</h5>
+                    <h5>Investido: R$ @XrpRS</h5>
                 </div>
             </div>
         </div>
@@ -193,8 +193,8 @@
                     </div>
                     <div>
                         <h5>Quantidade de Bitcoin: @bitcoinQuantidade</h5>
-                        <h5>Valor Investido - Bitcoin: R$ @bitcoinInvestimento</h5>
-                        <h5>Valor Atual - Bitcoin: R$ @bitcoinValorReal</h5>
+                        <h5>Investido: R$ @bitcoinInvestimento</h5>
+                        <h5>Valor Atual: R$ @bitcoinValorReal</h5>
                     </div>
                 </div>
             }
@@ -206,8 +206,8 @@
                     </div>
                     <div>
                         <h5>Quantidade de Ethereum: @ethereumQuantidade</h5>
-                        <h5>Valor Investido - Ethereum: R$ @ethereumInvestimento</h5>
-                        <h5>Valor Atual - Ethereum: R$ @ethereumValorReal</h5>
+                        <h5>Investido: R$ @ethereumInvestimento</h5>
+                        <h5>Valor Atual: R$ @ethereumValorReal</h5>
                     </div>
                 </div>
             }
@@ -219,8 +219,8 @@
                     </div>
                     <div>
                         <h5>Quantidade de Bitcoin Cash: @bitcoinCashQuantidade</h5>
-                        <h5>Valor Investido - Bitcoin Cash: R$ @bitcoinCashInvestimento</h5>
-                        <h5>Valor Atual - Bitcoin Cash: R$ @bitcoinCashValorReal</h5>
+                        <h5>Investido: R$ @bitcoinCashInvestimento</h5>
+                        <h5>Valor Atual: R$ @bitcoinCashValorReal</h5>
                     </div>
                 </div>
             }
@@ -232,8 +232,8 @@
                     </div>
                     <div>
                         <h5>Quantidade de XRP: @xrpQuantidade</h5>
-                        <h5>Valor Investido - XRP: R$ @xrpInvestimento</h5>
-                        <h5>Valor Atual - XRP: R$ @xrpValorReal</h5>
+                        <h5>Investido: R$ @xrpInvestimento</h5>
+                        <h5>Valor Atual: R$ @xrpValorReal</h5>
                     </div>
                 </div>
             }
@@ -245,8 +245,8 @@
                     </div>
                     <div>
                         <h5>Quantidade de PAX Gold: @paxGoldQuantidade</h5>
-                        <h5>Valor Investido - PAX Gold: R$ @paxGoldInvestimento</h5>
-                        <h5>Valor Atual - PAX Gold: R$ @paxGoldValorReal</h5>
+                        <h5>Investido: R$ @paxGoldInvestimento</h5>
+                        <h5>Valor Atual: R$ @paxGoldValorReal</h5>
                     </div>
                 </div>
             }
@@ -258,8 +258,8 @@
                     </div>
                     <div>
                         <h5>Quantidade de Litecoin: @litecoinQuantidade</h5>
-                        <h5>Valor Investido - Litecoin: R$ @litecoinInvestimento</h5>
-                        <h5>Valor Atual - Litecoin: R$ @litecoinValorReal</h5>
+                        <h5>Investido: R$ @litecoinInvestimento</h5>
+                        <h5>Valor Atual: R$ @litecoinValorReal</h5>
                     </div>
                 </div>
             }
